2010-01-29  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/hlsring.py:
	* flumotion/test/test_resource.py:
	Fix pep8
	* flumotion/test/test_hls_ring.py:
	Fix test for the new max-extra-buffers property
	* flumotion/component/consumers/applestreamer/applestreamer.xml:
	Disable untested properties

2010-01-29  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavi Martinez

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	* flumotion/component/consumers/applestreamer/applestreamer.xml:
	* flumotion/component/consumers/applestreamer/hlsring.py:
	Added new property max-extra-buffers

2010-01-29  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/resources.py:
	* flumotion/test/test_resource.py:
	Don't decode the cookie twice and do it in try/except block

2010-01-28  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Marc-André

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	Define remove_client called by the HTTPAuthenticator but not used
	in the apple streamer, where expiration is checked on each request
	using using cookies.
	* flumotion/component/consumers/applestreamer/hlsring.py:
	Fragments must be available to clients for some time after they
	have been removed from the playlist

2010-01-22  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	Round fragments's duration to prevent innacuracies in the encoder's
	keyframe distance

2010-01-21  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/muxers/mpegts/mpegts.xml:
	Add missing __init__.py to the bundle

2010-01-20  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion-fragmented-streaming.spec.in:
	Remove 'python-uuid' and 'gst-plugins-bad' dependencies.
	They are handled by fsp-role-streamer.
	Fix the release date
