@@ -1,3 +1,12 @@
+2010-02-03  Andoni Morales Alastruey  <amorales@flumotion.com>
+
+	reviewed by: Xavi Martinez
+
+	* flumotion/component/consumers/applestreamer/applestreamer.py:
+	* flumotion/component/consumers/applestreamer/hlsring.py:
+	* flumotion/component/consumers/applestreamer/resources.py:
+	Improve component logs
+
 2010-01-29  Andoni Morales Alastruey  <amorales@flumotion.com>
 
 	* flumotion/component/consumers/applestreamer/hlsring.py:
